# study-buddy

./: .gitignore  LICENSE  README.md  app.py  docker-compose.yml  env.py  init.sql  pyproject.toml  requirements.txt  test.py  vectordb.py
data/: loaders.py  pgvector.py
utils/: vectordb.py
