[tool.poetry]
name = "study-buddy"
version = "0.1.0"
description = ""
authors = ["Casey <caseyjohnsonwv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "23.2.1"
aiohttp = "3.9.1"
aiosignal = "1.3.1"
altair = "5.2.0"
annotated-types = "0.6.0"
anyio = "4.2.0"
attrs = "23.2.0"
beautifulsoup4 = "4.12.3"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.2.0"
cycler = "0.12.1"
dataclasses-json = "0.6.3"
distro = "1.9.0"
faiss-cpu = "1.7.4"
fastapi = "0.109.0"
ffmpy = "0.3.1"
filelock = "3.13.1"
fonttools = "4.47.2"
frozenlist = "1.4.1"
fsspec = "2023.12.2"
gradio = "4.16.0"
gradio-client = "0.8.1"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.26.0"
huggingface-hub = "0.20.3"
idna = "3.6"
importlib-resources = "6.1.1"
jinja2 = "3.1.3"
jsonpatch = "1.33"
jsonpointer = "2.4"
jsonschema = "4.21.1"
jsonschema-specifications = "2023.12.1"
kiwisolver = "1.4.5"
langchain = "0.1.4"
langchain-community = "0.0.16"
langchain-core = "0.1.16"
langchain-openai = "0.0.5"
langsmith = "0.0.83"
lxml = "5.1.0"
markdown-it-py = "3.0.0"
markupsafe = "2.1.4"
marshmallow = "3.20.2"
matplotlib = "3.8.2"
mdurl = "0.1.2"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
numpy = "1.26.3"
openai = "1.10.0"
orjson = "3.9.12"
packaging = "23.2"
pandas = "2.2.0"
pillow = "10.2.0"
pydantic = "2.5.3"
pydantic-core = "2.14.6"
pydub = "0.25.1"
pygments = "2.17.2"
pyparsing = "3.1.1"
pypdf = "4.0.1"
python-dateutil = "2.8.2"
python-dotenv = "1.0.1"
python-multipart = "0.0.6"
python-pptx = "0.6.23"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
referencing = "0.33.0"
regex = "2023.12.25"
requests = "2.31.0"
rich = "13.7.0"
rpds-py = "0.17.1"
ruff = "0.1.14"
semantic-version = "2.10.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.5"
sqlalchemy = "2.0.25"
starlette = "0.35.1"
tenacity = "8.2.3"
tiktoken = "0.5.2"
tomlkit = "0.12.0"
toolz = "0.12.1"
tqdm = "4.66.1"
typer = "0.9.0"
typing-inspect = "0.9.0"
typing-extensions = "4.9.0"
tzdata = "2023.4"
urllib3 = "2.1.0"
uvicorn = "0.27.0"
websockets = "11.0.3"
xlsxwriter = "3.1.9"
yarl = "1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
